Fix to the issue types dropdown not showing the selected issue types and an improvement to the max issues message

--- a/static/spa/src/Main.css
+++ b/static/spa/src/Main.css
@@ -97,6 +97,10 @@ div.bulk-move-main-panel > div > div {
   height: fit-content;
 }
 
+div.panel-message {
+  text-align: center;
+}
+
 div.panel-header {
   display: flex;
   flex-wrap: wrap;
